<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:orientation="vertical">

    <ScrollView style="@style/StyleScrollView"
      >

        <LinearLayout style="@style/LinearLayoutBasic">

            <TextView
                style="@style/StyleTextViewHeading"
                android:text="@string/login" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_mobile_no"
                style="@style/StyleTIL"
                android:layout_marginTop="25dp">

                <EditText
                    style="@style/StyleEditText"
                    android:drawableLeft="@drawable/ic_mobile"
                    android:drawableStart="@drawable/ic_mobile"
                    android:hint="@string/enter_mobile"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                style="@style/StyleTIL">

                <EditText
                    style="@style/StyleEditText"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/enter_pass"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_forget_pass"
                style="@style/StyleButton"
                android:layout_gravity="end"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/opensans_italic"
                android:text="@string/forgot_pass" />

            <Button
                android:id="@+id/btn_login"
                style="@style/StyleButtonGradient"
                android:layout_marginTop="88dp"
                android:text="@string/login"
                android:textSize="@dimen/text_btn" />

            <Button
                android:id="@+id/btn_SignUp"
                style="@style/StyleButton"
                android:layout_marginTop="20dp"
                android:text="@string/new_user" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

