<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleScrollView"
    android:background="@drawable/img_background"
    tools:context=".activity.SignupActivity">

    <LinearLayout style="@style/LinearLayoutBasic">

        <TextView
            style="@style/StyleTextViewHeading"
            android:text="@string/sign_up" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            style="@style/StyleTIL"
            android:layout_marginTop="25dp">

            <EditText
                style="@style/StyleEditText"
                android:drawableLeft="@drawable/ic_user"
                android:drawableStart="@drawable/ic_user"
                android:hint="@string/string_full_name"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_mobile_no"
            style="@style/StyleTIL">

            <EditText
                style="@style/StyleEditText"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawableStart="@drawable/ic_mobile"
                android:hint="@string/enter_mobile"
                android:imeOptions="actionNext"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            style="@style/StyleTIL">

            <EditText
                style="@style/StyleEditText"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/string_email_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            style="@style/StyleTIL">

            <EditText
                android:id="@+id/et_password"
                style="@style/StyleEditText"
                android:paddingRight="10dp"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/enter_pass"
                android:drawableRight="@drawable/pwd_hide"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/pwd_hide"
                android:paddingEnd="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_c_pass"
            style="@style/StyleTIL">

            <EditText
                style="@style/StyleEditText"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/confirm_pass"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:theme="@style/AppThemeWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_refer_code"
            style="@style/StyleTIL">

            <EditText
                style="@style/StyleEditText"
                android:drawableLeft="@drawable/ic_referral_icon"
                android:drawableStart="@drawable/ic_referral_icon"
                android:hint="@string/apply_refer_code"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:theme="@style/AppThemeWhite" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_approval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppThemeWhite" />

            <TextView
                android:id="@+id/tv_terms_and_condition"
                style="@style/StyleTextView"
                android:layout_margin="0dp"
                android:gravity="start"
                android:text="@string/text_terms_and_conditions" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/StyleButtonGradient"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            android:text="@string/sign_up"
            android:textSize="@dimen/text_btn" />

    </LinearLayout>
</ScrollView>