<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleScrollView"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".activity.ForgetPassword">

    <LinearLayout style="@style/LinearLayoutBasic">

        <TextView
            style="@style/StyleTextViewHeading"
            android:text="@string/reset_pass" />

        <TextView
            style="@style/StyleTextView"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="25dp"
            android:text="@string/text_otp_sending" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_mobile_no"
            style="@style/StyleTIL"
            android:layout_marginTop="30dp">

            <EditText
                style="@style/StyleEditText"
                android:drawableLeft="@drawable/ic_mobile"
                android:drawableStart="@drawable/ic_mobile"
                android:hint="@string/enter_mobile"
                android:imeOptions="actionDone"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/StyleButtonGradient"
            android:layout_marginTop="80dp"
            android:text="Submit" />

    </LinearLayout>
</ScrollView>