<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleScrollView"
    android:background="@drawable/img_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ActivateAccAct"
    tools:showIn="@layout/activity_update_pro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_image_profile"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentLeft="true"
            android:background="#bfbbbb"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/btn_edit_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@+id/cv"
            android:layout_alignRight="@+id/cv"
            android:layout_marginTop="130dp"
            android:background="@drawable/bg_circle"
            android:padding="6dp"
            android:src="@drawable/ic_edit_blue" />

        <Button
            android:id="@+id/btn_active_status"
            android:layout_width="70dp"
            android:text="Active"
            android:layout_height="20dp"
            android:layout_below="@id/iv_image_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_active"
            android:fontFamily="@font/opensans_semibold"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="10sp" />


        <android.support.v7.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_active_status"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_full_name"
                    style="@style/StyleTIL"
                    android:layout_margin="0dp"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/AppThemeGray">

                    <EditText
                        style="@style/StyleEditTextUpdatePro"
                        android:drawableLeft="@drawable/ic_name_blue"
                        android:drawableStart="@drawable/ic_name_blue"
                        android:hint="@string/string_full_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_mobile_no"
                    style="@style/StyleTIL"
                    android:layout_margin="0dp"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/AppThemeGray">

                    <EditText
                        style="@style/StyleEditTextUpdatePro"
                        android:drawableLeft="@drawable/ic_mobile_blue"
                        android:drawableStart="@drawable/ic_mobile_blue"
                        android:hint="@string/enter_mobile"
                        android:enabled="false"
                        android:focusable="false"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/StyleTIL"
                    android:layout_margin="0dp"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/AppThemeGray">

                    <EditText
                        style="@style/StyleEditTextUpdatePro"
                        android:drawableLeft="@drawable/ic_email_blue"
                        android:drawableStart="@drawable/ic_email_blue"
                        android:hint="@string/string_email_id"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_address"
                    style="@style/StyleTIL"
                    android:layout_margin="0dp"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:theme="@style/AppThemeGray"
                   >

                    <EditText
                        android:id="@+id/et_get_address"
                        style="@style/StyleEditTextUpdatePro"
                        android:layout_marginBottom="10dp"
                        android:focusableInTouchMode="false"
                        android:drawableLeft="@drawable/ic_location"
                        android:drawableStart="@drawable/ic_location"
                        android:hint="@string/string_address"
                        android:maxLines="3"
                        android:imeOptions="actionDone"
                       />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_update_profile"
            style="@style/StyleButtonBlue"
            android:layout_below="@id/cv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/update_profile" />

       <!-- <Button
            android:id="@+id/btn_activate_profile"
            style="@style/StyleButtonBlue"
            android:layout_below="@id/btn_update_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/activate_your_profile" />
   --> </RelativeLayout>
</ScrollView>
